# space-converter

./: .gitmodules  CMakeLists.txt  README.md
blender_addons/bspace/: __init__.py  bspace_panel.py  bspace_pref.py  bspace_remote.py
scripts/space_converter/aurora/: build_aurora.sh  run_aurora.sh
scripts/space_converter/barbora/: build_bar.sh  run_bar.sh
scripts/space_converter/cs/: build_cs_p06.sh
scripts/space_converter/karolina/: build_kar.sh  gpu.sh  run_kar.sh
scripts/space_converter/leonardo/: build_leo.sh  run_leo.sh
scripts/space_converter/lumi/: build_lumi.sh  run_lumi.sh
scripts/space_converter/macos/: build.sh  run.sh
scripts/util/: draw_raw.py
src/: CMakeLists.txt  args_processing.cpp  args_processing.h  data_communication.cpp  data_communication.h  data_processing.cpp  data_processing.h  main.cpp
src/changa/: CMakeLists.txt  changa_nchilada_convert_vdb.cpp  changa_nchilada_convert_vdb.h  changa_nchilada_extract_iolib.cpp  changa_nchilada_extract_iolib.h  changa_tipsy_convert_vdb.cpp  changa_tipsy_convert_vdb.h  changa_tipsy_extract_iolib.cpp  changa_tipsy_extract_iolib.h
src/changa/utility/structures/: TipsyFile.cpp  TipsyFile.h  TipsyReader.cpp  io_config.h  xdr_template.h
src/changa/utility/xdr/: htonl.c  types.h  xdr.c  xdr.h  xdr_array.c  xdr_float.c  xdr_intXX_t.c  xdr_mem.c  xdr_ref.c  xdr_sizeof.c
src/common/: CMakeLists.txt  connection_tcp.cpp  connection_tcp.h  convert_common.cpp  convert_common.h  convert_vdb.cpp  convert_vdb.h  data_common.h  dense_common.cpp  dense_common.h
src/csv/: CMakeLists.txt  csv_convert_vdb.cpp  csv_convert_vdb.h  csv_extract_iolib.cpp  csv_extract_iolib.h
src/gadget/: CMakeLists.txt  gadget_convert_vdb.cpp  gadget_convert_vdb.h  gadget_extract_iolib.cpp  gadget_extract_iolib.h  gadget_simple_convert_vdb.cpp  gadget_simple_convert_vdb.h  gadget_simple_extract_iolib.cpp  gadget_simple_extract_iolib.h
src/gadget/utility/: CMakeLists.txt
src/gadget/utility/OpenGadget3/: CMakeLists.txt  gadgetconfig.h
src/gadget/utility/OpenGadget3/Blackholes/: blackhole.c  blackhole.h  blackhole_begrun.h  blackhole_feedback_loop.c  blackhole_swallow_loop.c  density_stars.c
src/gadget/utility/OpenGadget3/CodeBase/: allvars.c  allvars.h  begrun.c  domain.c  domain.h  endrun.c  global.c  greentree.h  init.c  main.c  peano.c  precision.h  proto.h  run.c  switches.h  utilities.c  utilities.h
src/gadget/utility/OpenGadget3/CoolingSfr/: cooling.c  cooling.h  sfr_eff.c  snIa_heating.c
src/gadget/utility/OpenGadget3/CoolingSfr/ImfLib/: libimf.c  libimf_vars.c  libimf_vars.h  normalizeimf.c
src/gadget/utility/OpenGadget3/CoolingSfr/Muppi/: Template-Config.sh  muppi.h  muppi_communications.c  muppi_kicks.h  muppi_normalize.c  muppi_proto.h  sfr_muppi.c
src/gadget/utility/OpenGadget3/CoolingSfr/Muppi/Documentation/: Config-MV-full.sh  Config_MUPPI.sh  Config_MV.sh  Makefile  README_MUPPI_FILES.txt  paramfile.txt  paramfile_AqC5_MV.txt  paramfile_AqC6_MV.txt
src/gadget/utility/OpenGadget3/CoolingSfr/Sfr_LT/: gl_cr_dust.c  lt.c  lt.h  lt_error_codes.h  lt_io.c  lt_sfr.c  lt_sfr_light.c  lt_sn.c  lt_sn.h  lt_sn_calc.c  lt_sn_init.c  lt_sn_light.c  lt_test_suite.c  lt_utils.c  lt_wal_cooling.c  lt_wal_cooling.h  lt_wal_cooling_nh.h
src/gadget/utility/OpenGadget3/Gravity/: accel.c  darkenergy.c  forcetree.c  forcetree.h  forcetree_update.c  gravtree.c  gravtree_forcetest.c  longrange.c  ngb.c  phidot.c  pm_nonperiodic.c  pm_periodic.c  pm_vars.c  pm_vars.h  potential.c
src/gadget/utility/OpenGadget3/Gravity/AdaptGravSoft/: ads_density.c  ads_ngb.c
src/gadget/utility/OpenGadget3/IO/: gadget3_io_lib.c  gadget3_io_lib.h  gadget3_io_lib_test.cpp  io.c  read_ic.c  read_ic_cluster.c  restart.c  second_order.c
src/gadget/utility/OpenGadget3/Integrator/: timestep.c
src/gadget/utility/OpenGadget3/Mfm/: Eos.hpp  ExactRiemannSolver.cpp  FluidVector.cpp  FluidVector.hpp  FluxSolver.cpp  FluxSolver.hpp  HllRiemannSolver.cpp  HllcRiemannSolver.cpp  Matrix.hpp  RiemannSolver.cpp  RiemannSolver.hpp  RoeRiemannSolver.cpp  Vector.hpp  gradients.cpp  mfm_fluxes.cpp  mfm_limiters.cpp
src/gadget/utility/OpenGadget3/System/: Md5.c  Md5.h  allocate.c  assert.h  bigfloat.h  calc_checksum.c  checksummed_sendrecv.c  communication.h  dd.h  mpi_util.c  mymalloc.c  numa.h  parallel_sort_special.c  pinning.c  sizelimited_sendrecv.c  soa.h  swap.c  swap.h  system.c  tags.h  vector.h
src/gadget/utility/OpenGadget3/System/psort-1.0/: alloc_utils.h  arr.h  datatypes.h  error_handling.h  math_utils.h  psort.h  safe_cast.h
src/genericio/: CMakeLists.txt  genericio_convert_vdb.cpp  genericio_convert_vdb.h  genericio_extract_iolib.cpp  genericio_extract_iolib.h
src/genericio/utility/: CMakeLists.txt
src/genericio/utility/GenericIO/: CMakeLists.txt  CRC64.h  GenericFileIO.h  GenericIO.cxx  GenericIO.h  GenericIOPrint.cxx
src/genericio/utility/SZ/: CMakeLists.txt
src/genericio/utility/SZ/include/: ByteToolkit.h  CompressElement.h  Huffman.h  TightDataPointStorageI.h  callZlib.h  dataCompression.h  dictionary.h  iniparser.h  sz.h  utility.h
src/genericio/utility/SZ/src/: ByteToolkit.c  CompressElement.c  Huffman.c  TightDataPointStorageI.c  TypeManager.c  callZlib.c  conf.c  dataCompression.c  iniparser.c  rw.c  sz.c  sz_double.c  sz_double_pwr.c  sz_double_ts.c  sz_float.c  sz_float_pwr.c  sz_float_ts.c  sz_int16.c  sz_int32.c  sz_int64.c  sz_int8.c  sz_uint16.c  sz_uint32.c  sz_uint64.c  sz_uint8.c  szd_double.c  szd_double_pwr.c  szd_float.c  szd_float_pwr.c  szd_int16.c  szd_int32.c  szd_int64.c  szd_int8.c  szd_uint16.c  szd_uint32.c  szd_uint64.c  szd_uint8.c  utility.c
src/haccbin/: CMakeLists.txt  haccbin_convert_vdb.cpp  haccbin_convert_vdb.h  haccbin_extract_iolib.cpp  haccbin_extract_iolib.h
src/hdf5/: CMakeLists.txt  hdf5_convert_vdb.cpp  hdf5_convert_vdb.h  hdf5_extract_iolib.cpp  hdf5_extract_iolib.h
src/utility/: CMakeLists.txt  cudakdtree_tool.cu  cudakdtree_tool.h  dense_utility.h  nano2vdb.cpp  nanoflann_tool.cpp  nanoflann_tool.h  vdb2histo.cpp  vdb2nano.cpp  vdb2png.cpp  vdb_merge.cpp
(+2 files in other folders)
